--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p class="learn">Learning</p>
         <p class="">Published 21 Dec 2023</p>
         <header>
-          <h1>1HTML & CSS foundation</h1>
+          <h1>HTML & CSS foundation</h1>
         </header>
         <article>
           These languages are the backbone of every website, defining structure,
